--- a/command-line/101-gps.md
+++ b/command-line/101-gps.md
@@ -1,5 +1,5 @@
 ---
-tutorial: "Command Line Basics"
+tutorial: "Command Line Fundamentals"
 section: "Unit 1: Finding your way"
 author: Dennis Tenen
 update: "5/29/15"
