--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -35,14 +35,15 @@ by Bash without modification.<sup>1</sup>
 - [Unit 5: Search](https://github.com/denten/dhnotes/blob/master/command-line/105-search.md)
 - [Unit 6: Filters](https://github.com/denten/dhnotes/blob/master/command-line/106-filters.md)
 - [Unit 7: Networking](https://github.com/denten/dhnotes/blob/master/command-line/107-network.md)
-- [Unit 8: Users and Groups](https://github.com/denten/dhnotes/blob/master/command-line/108-users.md)
-- [Unit 9: Messaging](https://github.com/denten/dhnotes/blob/master/command-line/113-message.md)
-- [Unit 10: Multiplexing](https://github.com/denten/dhnotes/blob/master/command-line/114-multiplex.md)
-- [Unit 11: Text Manipulation](https://github.com/denten/dhnotes/blob/master/command-line/109-text.md)
-- [Unit 12: Scripting](https://github.com/denten/dhnotes/blob/master/command-line/110-script.md)
-- [Unit 13: Scheduling](https://github.com/denten/dhnotes/blob/master/command-line/111-schedule.md)
-- [Unit 14: Package management](https://github.com/denten/dhnotes/blob/master/command-line/112-package.md)
-- [Unit 15: Debugging](https://github.com/denten/dhnotes/blob/master/command-line/115-debug.md)
+- [Unit 8: Moving Data](https://github.com/denten/dhnotes/blob/master/command-line/116-moving-data.md)
+- [Unit 9: Users and Groups](https://github.com/denten/dhnotes/blob/master/command-line/108-users.md)
+- [Unit 10: Messaging](https://github.com/denten/dhnotes/blob/master/command-line/113-message.md)
+- [Unit 11: Multiplexing](https://github.com/denten/dhnotes/blob/master/command-line/114-multiplex.md)
+- [Unit 12: Text Manipulation](https://github.com/denten/dhnotes/blob/master/command-line/109-text.md)
+- [Unit 13: Scripting](https://github.com/denten/dhnotes/blob/master/command-line/110-script.md)
+- [Unit 14: Scheduling](https://github.com/denten/dhnotes/blob/master/command-line/111-schedule.md)
+- [Unit 15: Package management](https://github.com/denten/dhnotes/blob/master/command-line/112-package.md)
+- [Unit 16: Debugging](https://github.com/denten/dhnotes/blob/master/command-line/115-debug.md)
 
 ## Resources
 
