--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -55,6 +55,7 @@ by Bash without modification.<sup>1</sup>
   Zed Shaw
 - [Data Science at the Command Line](http://datascienceatthecommandline.com/)
   by Jeroen Janssens
+- [The Bash Guide](http://guide.bash.academy/) by [Maarten Billemont](http://lhunath.com/)
 - [The Art of Command Line](https://github.com/jlevy/the-art-of-command-line)
   by jlevy
 - [commandlinefu.com](http://www.commandlinefu.com)
