--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -17,15 +17,6 @@ update: "5/29/15"
 
 ## Bash
 
-> Bash is the GNU Project's shell. Bash is the Bourne Again SHell. Bash is an
-sh-compatible shell that incorporates useful features from the Korn shell (ksh)
-and C shell (csh). It is intended to conform to the IEEE POSIX P1003.2/ISO
-9945.2 Shell and Tools standard. It offers functional improvements over sh for
-both programming and interactive use. In addition, most sh scripts can be run
-by Bash without modification.<sup>1</sup>
-
-1. http://www.gnu.org/software/bash/
-
 >  Bash/sh/zsh family is brilliant at intense interaction with humans. Aliases, short built-in commands, oneliner-oriented nature, keyboard ergonomics, really concise file/process handling - all of this makes it _the shell_.<sup>2</sup>
 
 2. https://web.archive.org/web/20150623025431/https://news.ycombinator.com/item?id=6866085
@@ -55,7 +46,7 @@ by Bash without modification.<sup>1</sup>
   Zed Shaw
 - [Data Science at the Command Line](http://datascienceatthecommandline.com/)
   by Jeroen Janssens
-- [The Bash Guide](http://guide.bash.academy/) by [Maarten Billemont](http://lhunath.com/)
+- [The Bash Guide](http://guide.bash.academy/) and [Bash Reference Sheet](http://mywiki.wooledge.org/BashSheet) by [Maarten Billemont](http://lhunath.com/)
 - [The Art of Command Line](https://github.com/jlevy/the-art-of-command-line)
   by jlevy
 - [commandlinefu.com](http://www.commandlinefu.com)
