--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -50,3 +50,4 @@ update: "5/29/15"
 - [The Art of Command Line](https://github.com/jlevy/the-art-of-command-line)
   by jlevy
 - [commandlinefu.com](http://www.commandlinefu.com)
+- [Advanced Bash-Scripting Guide](http://www.tldp.org/LDP/abs/html/) by Mendel Cooper
