--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -23,7 +23,7 @@ update: "5/29/15"
 
 > The craft of scripting is not hard to master, since scripts can be built in bite-sized sections and there is only a fairly small set of shell-specific operators and options [1] to learn. The syntax is simple -- even austere -- similar to that of invoking and chaining together utilities at the command line, and there are only a few "rules" governing their use. Most short scripts work right the first time, and debugging even the longer ones is straightforward.<sup>2</sup>
 
-<sup>2</sup> http://www.tldp.org/LDP/abs/html/why-shell.html
+<sup>2 http://www.tldp.org/LDP/abs/html/why-shell.html</sup>
 
 ## Table of contents
 
