--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -23,7 +23,12 @@ update: "5/29/15"
 
 > The craft of scripting is not hard to master, since scripts can be built in bite-sized sections and there is only a fairly small set of shell-specific operators and options [1] to learn. The syntax is simple -- even austere -- similar to that of invoking and chaining together utilities at the command line, and there are only a few "rules" governing their use. Most short scripts work right the first time, and debugging even the longer ones is straightforward.<sup>2</sup>
 
-<sup>2 http://www.tldp.org/LDP/abs/html/why-shell.html</sup>
+<sup>2. http://www.tldp.org/LDP/abs/html/why-shell.html</sup>
+
+> one person who posted to the net said he had an "epiphany" from a shell script (whcih used four commands and a script that looked like line noise) which renamed all his `.pas` files so that they ended with `.p` instead. I reserve my religious ecstasy for something more than renaming files. And, indeed, that was my memory fo Unix tools---you spend all your time learning to do complex and peculiar things that are, int he end, not really all that impressive.<sup>3</sup>
+
+<sup>3. Gim Giles of the Los Alamos National Laboratory as quoated in Garfinkel, Simson L., Donald Norman, and Dennis Ritchie. [The UNIX Hater’s Handbook: The Best of UNIX-Haters On-Line Mailing Reveals Why UNIX Must Die!](http://www.csf.ac.at/fileadmin/user_upload/BioComp/training/unix_haters_handbook.pdf). Edited by Daniel Weise, Simson Garfinkel, and Steven Strassmann. San Mateo, CA: IDG Books Worldwide, 1994, 161.
+ 
 
 ## Table of contents
 
