--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -48,7 +48,7 @@ Garfinkel, Simson L., Donald Norman, and Dennis Ritchie. [The UNIX Hater's
 Handbook: The Best of UNIX-Haters On-Line Mailing Reveals Why UNIX Must
 Die!](http://www.csf.ac.at/fileadmin/user_upload/BioComp/training/unix_haters_handbook.pdf).
 Edited by Daniel Weise, Simson Garfinkel, and Steven Strassmann. San Mateo, CA:
-IDG Books Worldwide, 1994, 161.
+IDG Books Worldwide, 1994, 161.</sup>
 
 ## Table of contents
 
