--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -35,7 +35,7 @@ https://web.archive.org/web/20150623025431/https://news.ycombinator.com/item?id=
 
 <sup>2. http://www.tldp.org/LDP/abs/html/why-shell.html</sup>
 
-> one person who posted to the net said he had an "epiphany" from a shell
+> One person who posted to the net said he had an "epiphany" from a shell
 > script (which used four commands and a script that looked like line noise)
 > which renamed all his `.pas` files so that they ended with `.p` instead. I
 > reserve my religious ecstasy for something more than renaming files. And,
