--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -73,6 +73,7 @@ IDG Books Worldwide, 1994, 161.</sup>
 
 - [The Command Line Crash Course](http://cli.learncodethehardway.org/book/) by
   Zed Shaw
+- [Bash Guide for Beginners](http://tldp.org/LDP/Bash-Beginners-Guide/html/index.html) by Machtelt Garrels
 - [Data Science at the Command Line](http://datascienceatthecommandline.com/)
   by Jeroen Janssens
 - [The Bash Guide](http://guide.bash.academy/) and [Bash Reference Sheet](http://mywiki.wooledge.org/BashSheet) by [Maarten Billemont](http://lhunath.com/)
