--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -76,8 +76,9 @@ IDG Books Worldwide, 1994, 161.</sup>
 - [Bash Guide for Beginners](http://tldp.org/LDP/Bash-Beginners-Guide/html/index.html) by Machtelt Garrels
 - [Data Science at the Command Line](http://datascienceatthecommandline.com/)
   by Jeroen Janssens
-- [The Bash Guide](http://guide.bash.academy/) and [Bash Reference Sheet](http://mywiki.wooledge.org/BashSheet) by [Maarten Billemont](http://lhunath.com/)
+- [The Bash Guide](http://guide.bash.academy/), [Bash Reference Sheet](http://mywiki.wooledge.org/BashSheet), and the old [BashGuide](http://mywiki.wooledge.org/BashGuide) by [Maarten Billemont](http://lhunath.com/)
 - [The Art of Command Line](https://github.com/jlevy/the-art-of-command-line)
   by jlevy
 - [commandlinefu.com](http://www.commandlinefu.com)
 - [Advanced Bash-Scripting Guide](http://www.tldp.org/LDP/abs/html/) by Mendel Cooper
+-  by 
