--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -81,3 +81,4 @@ IDG Books Worldwide, 1994, 161.</sup>
   by jlevy
 - [commandlinefu.com](http://www.commandlinefu.com)
 - [Advanced Bash-Scripting Guide](http://www.tldp.org/LDP/abs/html/) by Mendel Cooper
+- [Bash Pitfalls](http://mywiki.wooledge.org/BashPitfalls)
