--- a/command-line/000-cli.md
+++ b/command-line/000-cli.md
@@ -15,6 +15,8 @@ update: "5/29/15"
 - hackable
 - fun
 
+**integrate the comandline into your daily routine to manipulate files and folders, to launch applications, and for simple system-related scripting as an advanced replacement for your finder (file explorer) and spotlight**
+
 ## Bash
 
 >  Bash/sh/zsh family is brilliant at intense interaction with humans. Aliases,
