--- a/tutorials/command-line/000-cli.md
+++ b/tutorials/command-line/000-cli.md
@@ -17,7 +17,7 @@ update: "5/29/15"
 
 **integrate the comandline into your daily routine to manipulate files and folders, to launch applications, and for simple system-related scripting as an advanced replacement for your finder (file explorer) and spotlight**
 
-## Bash
+## Shell
 
 >  Bash/sh/zsh family is brilliant at intense interaction with humans. Aliases,
 >  short built-in commands, one liner-oriented nature, keyboard ergonomics,
