--- a/tutorials/command-line/000-cli.md
+++ b/tutorials/command-line/000-cli.md
@@ -54,6 +54,7 @@ IDG Books Worldwide, 1994, 161.</sup>
 
 ## Table of contents
 
+- [Unit 0: Conversing in plain text](https://github.com/dh-notes/dhnotes/blob/master/tutorials/command-line/100-plain-text.md)
 - [Unit 1: Finding your way](https://github.com/dh-notes/dhnotes/blob/master/tutorials/command-line/101-gps.md)
 - [Unit 2: Files and folders](https://github.com/denten/dhnotes/blob/master/tutorials/command-line/102-files.md)
 - [Unit 3: Permissions](https://github.com/denten/dhnotes/blob/master/tutorials/command-line/103-permissions.md)
