--- a/tutorials/command-line/101-gps.md
+++ b/tutorials/command-line/101-gps.md
@@ -8,6 +8,8 @@ update: "5/29/15"
 ## Unit 1: Finding your way
 
 ```
+# Follow along
+
 ls
 ls -l
 pwd
@@ -24,6 +26,8 @@ cd .
 history
 fortune
 cal
+
+# Your turn
 ```
 
 **Notes**: Tab complete everything. Do not advance until you understand the difference
