--- a/tutorials/command-line/101-gps.md
+++ b/tutorials/command-line/101-gps.md
@@ -1,15 +1,8 @@
----
-tutorial: "Command Line Fundamentals"
-section: "Unit 1: Finding your way"
-author: Dennis Tenen
-update: "5/29/15"
----
+# Unit 1: Finding your way
 
-## Unit 1: Finding your way
+## Follow along
 
 ```
-# Follow along
-
 ls
 ls -l
 pwd
@@ -27,14 +20,19 @@ history
 fortune
 cal
 
-# Your turn
 ```
+
+## Your turn
+
+- navigate to your home directory
+- find your Downloads directory
+- find your Documents directory
+- Explore: [Filesystem Hierarchy Standard](http://www.pathname.com/fhs/); 
+[Take the Linux Filesystem Tour](http://web.archive.org/web/20140224004333/http://tuxradar.com/content/take-linux-filesystem-tour/#null)
+
 
 **Notes**: Tab complete everything. Do not advance until you understand the difference
 between relative and absolute paths. Man everything, *nix has amazing
 documentation.
-
-**Explore**: [Filesystem Hierarchy Standard](http://www.pathname.com/fhs/); 
-[Take the Linux Filesystem Tour](http://web.archive.org/web/20140224004333/http://tuxradar.com/content/take-linux-filesystem-tour/#null)
 
 **Bonus**: `pushd`, `popd`, `cd -`
